Tue Jan 27 04:13:26 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Add support for specifying a MIME
	  subtype of '*' in --filter arguments.

Thu Jan 22 01:44:01 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Ignore extensions .msi and .msp, which are Microsoft
	  installer files, but which libmagic sometimes incorrectly identifies
	  as application/msword.

Tue Jan 06 21:15:14 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Use pkg-config in preference to determine flags needed
	  to compile and link with PCRE, as this will just work when
	  cross-compiling (at least under MXE).

Sun Dec 21 21:54:48 GMT 2014  Olly Betts <olly@survex.com>

	* query.cc: Handle [=0 as [=1.

Fri Dec 19 13:09:11 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac,diritor.cc: Avoid doing link tests with libmagic in
	  configure as they fail on mingw due to not automatically picking up
	  libraries which libmagic itself depends on.

Fri Dec 19 03:21:13 GMT 2014  Olly Betts <olly@survex.com>

	* docs/cgiparams.rst: Improve wording of docs for SORT parameter.

Tue Dec 16 04:06:06 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo: 'libmagic-devl' -> 'libmagic-devel'

Tue Dec 16 03:53:25 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Define MINGW_HAS_SECURE_API under mingw to get
	  _putenv_s() declared in stdlib.h.

Thu Dec 11 11:33:41 GMT 2014  Olly Betts <olly@survex.com>

	* Makefile.am: Add timegm.cc to scriptindex_SOURCES to fix build on
	  platforms which don't provide timegm().

Wed Dec 03 04:17:18 GMT 2014  Olly Betts <olly@survex.com>

	* templates/xml: Update handling of DATE1, DATE2 and DAYSMINUS which
	  were renamed in 0.6.x and the compatibility aliases removed in
	  1.0.0. 

Wed Dec 03 04:15:51 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Update documentation references to DATE1,
	  DATE2, and DAYSMINUS which were renamed in 0.6.x and the
	  compatibility aliases removed in 1.0.0. 
