@@ -1,3 +1,8 @@
+Tue Jan 27 04:37:12 GMT 2015  Olly Betts <olly@survex.com>
+
+	* docs/overview.rst,omindex.cc: Interpret a command of "false" in
+	  "--filter" as meaning to ignore files with that MIME type.
+
 Tue Jan 27 04:13:26 GMT 2015  Olly Betts <olly@survex.com>
 
 	* docs/overview.rst,omindex.cc: Add support for specifying a MIME
